jenkins-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ing
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"  
spec:
  rules:
  - http:
      paths:
      - path: /build
        backend:
          serviceName: jenkins
          servicePort: 8080
